[package]
name = "json-for-redis"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "rejson"
test = false

[dependencies]
jsonpath-rs  = { git = "https://github.com/MichaHoffmann/jsonpath-rs" }
redis-module = "1.0.1"
serde = "1.0.144"
serde_json = "1.0.85"

[dev-dependencies]
rstest = "0.15.0"
redis = "0.21.6"
rand = "0.8.0"
test-context = "0.1.4"
